# Turboquant-vectordatabase

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  refactor_engine.py  refactor_engine2.py  start.bat  start.sh  test_search.py  test_search_hotpot.py  upload_hotpot.py  upload_qasper.py
data/tq_index/: coarse_centroids.npy  list_offsets.npy  metadata.json  norms.npy  qjl_signs.npy  res_norms.npy  rot_op.npy  sq_centroids.npy  sq_codes.npy  vector_ids.npy
src/: dashboard.html  engine.rs  guide.html  main.rs  turboquant.rs
