[package]
name = "turboquant-server"
version = "0.1.0"
edition = "2021"
description = "TurboQuant Standalone Vector Database"

[dependencies]
# Web Framework & Async Runtime
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallel processing (SIMD/Threading)
rayon = "1.8"

# CORS
tower-http = { version = "0.5", features = ["cors"] }
